<resources>
    <string name="app_name">PrimeMaster</string>
    <string name="a_prime_number">A PRIME NUMBER?</string>
    <string name="no_button">NO</string>
    <string name="yes_button">YES</string>
    <string name="skip_button">Skip</string>
    <string name="is_text">IS</string>
    <string name="score_string">Score: %d</string>
    <string name="prime_number_text">%d</string>
    <string name="cheat">Cheat</string>
    <string name="hint">Hint</string>
    <string name="back">back</string>
</resources>
